swagger update replace status by health
